# ax-gateway

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/skills/: supervise.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  operator-qa.yml  publish.yml  release-please.yml
ax_cli/: __init__.py  client.py  config.py  gateway.py  gateway_runtime_types.py  main.py  output.py  token_cache.py
ax_cli/commands/: agents.py  apps.py  assign.py  auth.py  bootstrap.py  channel.py  context.py  credentials.py  events.py  gateway.py  handoff.py  heartbeat.py  keys.py  listen.py  messages.py  mint.py  profile.py  qa.py  reminders.py  spaces.py  tasks.py  upload.py  watch.py
ax_cli/static/: demo.html
channel/: .mcp.json  README.md  package.json  server.ts  test-channel.mjs  test-headless-mcp.mjs
channel/.claude-plugin/: plugin.json
docs/: HANDOFF-hermes-plugin.md  SETUP-HERMES.md  agent-authentication.md  credential-security.md  gateway-agent-runtimes.md  login-e2e-runbook.md  mcp-app-signal-adapter.md  mcp-headless-pat.md  mcp-remote-oauth.md  operator-qa-runbook.md  release-process.md  reminder-lifecycle.md  roadmap.md
docs/adr/: ADR-001-gateway-localhost-only.md  ADR-002-flat-proxy-allowlist.md  ADR-003-session-tokens-per-connect.md  ADR-004-space-state-in-session.md  ADR-006-use-admin-proxy-tiers.md  ADR-007-agent-classes-and-signals.md  ADR-008-agent-status-model.md  ADR-009-platform-heartbeat-contract.md
docs/scenarios/: rotate-agent-pat.md
examples/: echo_agent.py  echo_agent.sh  weather_agent.py
examples/gateway_ollama/: ollama_bridge.py
examples/gateway_strands/: strands_bridge.py
examples/hermes_sentinel/: README.md  hermes_bridge.py
scripts/: operator_qa_ci.py  update.sh
skills/: SKILL.md
skills/gateway-agent-setup/: SKILL.md
specs/: README.md
specs/AGENT-AVAILABILITY-CONTRACT-001/: spec.md
specs/AGENT-CONTACT-001/: spec.md
specs/AGENT-MESH-PATTERNS-001/: spec.md
specs/AGENT-PAT-001/: spec.md
specs/ATTACHMENT-FLOW-001/: spec.md
specs/AX-SCHEDULE-001/: spec.md
specs/AXCTL-BOOTSTRAP-001/: spec.md
specs/CLI-SURFACE-INVENTORY-001/: inventory.md
specs/CLI-WORKFLOW-001/: spec.md
specs/CONTRACT-QA-001/: spec.md
tests/: conftest.py  test_agents_check.py  test_agents_commands.py  test_agents_commands_ext.py  test_agents_helpers.py  test_agents_list_availability.py  test_agents_placement.py  test_agents_test_invoking_principal.py  test_agents_update_drop_detection.py  test_apps_commands.py  test_auth_commands.py  test_auth_doctor_gateway_managed.py  test_auth_helpers.py  test_avatar_gen.py  test_ax_adapter.py  test_ax_adapter_activity.py  test_bootstrap_agent.py  test_channel.py  test_claude_cli_runtime.py  test_cli_stdio_encoding.py  test_client.py  test_codex_cli_runtime.py  test_config.py  test_context_commands.py  test_context_promote.py  test_credentials_commands.py  test_events_commands.py  test_gateway_commands.py  test_gateway_commands_ext.py  test_gateway_commands_ext2.py  test_gateway_coverage.py  test_gateway_helpers.py  test_gateway_hermes_plugin.py  test_gateway_host_header.py  test_gateway_runtime_install.py  test_gateway_strands_template.py  test_gateway_ui_static.py  test_groq_sdk_runtime.py  test_handoff.py  test_heartbeat_commands.py  (+28 more)
(+15 files in other folders)
