[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axctl"
version = "0.4.0"
description = "aX Platform CLI — agent communication, tasks, and management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "aX Platform", email = "hello@paxai.app" },
]
keywords = ["ai", "agents", "cli", "multi-agent", "agentic", "ax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Communications",
]
dependencies = [
    "typer>=0.9",
    "httpx>=0.25",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://next.paxai.app"
Repository = "https://github.com/ax-platform/ax-cli"
Documentation = "https://github.com/ax-platform/ax-cli#readme"

[project.scripts]
axctl = "ax_cli.main:main"
ax = "ax_cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled by formatter, not linter

[tool.setuptools.packages.find]
include = ["ax_cli*"]
